crystal-facet-uml (1.64.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * When clicking, an arrow is shown to indicate that dragging is possible
  * when dragging or creating, the grid indicator is a solid line when snapped
  * new type icons for relationships and some classifiers and features

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 07 Jun 2025 14:00:00 +0100

crystal-facet-uml (1.64.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * fix for test case testMultiByteUseCase on x86 systems

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 07 Jun 2025 14:00:00 +0100

crystal-facet-uml (1.64.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * mouse cursor indicates options for creating objects with nicer icons
  * the plain txt export performs linebreaks at 80 chars
    and omits empty descriptions
  * the plain txt export uses markdown headings, code, lists
  * the json storage and export files add linebreaks at 80 chars of contents
  * exported json schema shows enum values of display_tags and element types
  * exported json and html show simplified element type names
  * in json export, enums are written as string and int value in the same line
  * json format changed to version 1.2, this is downwards compatible

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 07 Jun 2025 08:00:00 +0100

crystal-facet-uml (1.63.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Improved navigation in html export
  * All linebreaks are transformed to html and doxygen exports
  * removed limitation on maximum 10 appearance-links in html export

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 04 May 2025 10:30:00 +0100

crystal-facet-uml (1.63.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships to contained elements start from inner border, not outside
  * too short relationships are weighted by additional dept
    layout_good_cases        ERR=0,  W/C=8,    W/F=1,   W/L=25,   W/R=61